Migrate to dev PC

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,11 +19,11 @@
 </head>
 
 <body>
-    <p>Hello World</p>
+    <p>Hello World!</p>
 
 
     <script src="/templates.js"></script>
-    <script src="/scripts.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 
 </html>
