--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
 
     <title>
         ploTTY
@@ -12,7 +12,7 @@
 
     <meta name="description" content="Browser Based Serial Monitor/Plotter that doesn't suck!">
 
-    <link rel="icon" type="image/png" href="/assets/favicon.ico"/>
+    <link rel="icon" type="image/png" href="./assets/favicon.ico"/>
 
     <!-- <link rel="stylesheet" href="/static/assets/css/bulma.light.css"/> -->
 
@@ -20,10 +20,6 @@
 
 <body>
     <p>Hello World!</p>
-
-
-    <script src="/templates.js"></script>
-    <script src="/bundle.js"></script>
 </body>
 
 </html>
