--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>
         ploTTY
@@ -13,9 +13,6 @@
     <meta name="description" content="Browser Based Serial Monitor/Plotter that doesn't suck!">
 
     <link rel="icon" type="image/png" href="./assets/favicon.ico"/>
-
-    <!-- <link rel="stylesheet" href="/static/assets/css/bulma.light.css"/> -->
-
 </head>
 
 <body>
