Migrate from noflo-svelte: ditch Docker

--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>
-        ploTTY
-    </title>
+	<title>NoFlo-Svelte</title>
 
-    <meta name="description" content="Browser Based Serial Monitor/Plotter that doesn't suck!">
-
-    <link rel="icon" type="image/png" href="./assets/favicon.ico"/>
+	<link rel='icon' type='image/png' href='./assets/favicon/favicon.ico'>
 </head>
 
 <body>
-    <p>Hello World!</p>
-
-    <button class="button is-primary">Test Button</button>
-
 </body>
-
 </html>
