--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,15 @@
 </head>
 
 <body>
+
+	<script>
+		// Check that service workers are supported
+		if ('serviceWorker' in navigator) {
+		  // Use the window load event to keep the page load performant
+		  window.addEventListener('load', () => {
+			navigator.serviceWorker.register('/service-worker.js');
+		  });
+		}
+	</script>
 </body>
 </html>
