--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
 	<title>ploTTY</title>
 
-	<link rel='icon' type='image/png' href='./assets/favicon/favicon.ico'>
+	<link rel='icon' type='image/png' href='./assets/favicon/icon_x48.png'>
 </head>
 
 <body>
