Small changes, z-index fix, add side buttons

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-
 	<script>
 		// Check that service workers are supported
 		if ('serviceWorker' in navigator) {
-		  // Use the window load event to keep the page load performant
-		  window.addEventListener('load', () => {
-			navigator.serviceWorker.register('/service-worker.js');
-		  });
+			// Use the window load event to keep the page load performant
+			window.addEventListener('load', () => {
+				navigator.serviceWorker.register('/service-worker.js');
+			});
+			// TODO handle service worker load fail (devtools)
 		}
 	</script>
 </body>
