--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
 <body>
 	<script>
 		// Check that service workers are supported
-		if ('serviceWorker' in navigator) {
-			// Use the window load event to keep the page load performant
-			window.addEventListener('load', () => {
-				navigator.serviceWorker.register('/service-worker.js').catch((err) => {
-					console.warn("SW registration failed with error " + err);
-				});
-			});
-		}
+		// if ('serviceWorker' in navigator) {
+		// 	// Use the window load event to keep the page load performant
+		// 	window.addEventListener('load', () => {
+		// 		navigator.serviceWorker.register('/service-worker.js').catch((err) => {
+		// 			console.warn("SW registration failed with error " + err);
+		// 		});
+		// 	});
+		// }
 	</script>
 </body>
 </html>
