--- a/src/app.html
+++ b/src/app.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%sveltekit.assets%/favicon/icon_x128.png" />
-        <meta name="viewport" content="width=device-width" />
-        <link rel="manifest" href="/manifest.json" />
 
-        %sveltekit.head%
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon/icon_x128.png" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="manifest" href="/manifest.json" />
 
-        <meta name="author" content="James Bennion-Pedley">
-    </head>
-    <body data-sveltekit-preload-data="hover">
-        <div style="display: contents">%sveltekit.body%</div>
-    </body>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4SG1FVCW81"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-4SG1FVCW81');
+    </script>
+
+    %sveltekit.head%
+
+    <meta name="author" content="James Bennion-Pedley">
+</head>
+
+<body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
