--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon/icon_x128.png" />
+    <link rel="icon" href="%sveltekit.assets%/favicon/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <link rel="manifest" href="/manifest.json" />
 
